auto hide working

--- a/timetable.html
+++ b/timetable.html
@@ -80,76 +80,76 @@
 			<button type="button" id="2breaks" name="breaks" value="2" class="timetableBtn">2</button>
 			<br>
 			<br>
-			<p>When is the First?</p>
-			<button type="button" id="1break1to2" name="break1" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="1break2to3" name="break1" value="2" class="timetableBtn active">Between P2 & P3</button>
-			<button type="button" id="1break3to4" name="break1" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="1break4to5" name="break1" value="4" class="timetableBtn">Between P4 & P5</button>
-			<button type="button" id="1break5to6" name="break1" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="1break6to7" name="break1" value="6" class="timetableBtn">Between P6 & P7</button>						
-			<button type="button" id="1break7to8" name="break1" value="7" class="timetableBtn">Between P7 & P8</button>						
-			<br>
-			<br>
-			<p>When is the Second?</p>
-			<button type="button" id="2break1to2" name="break2" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="2break2to3" name="break2" value="2" class="timetableBtn">Between P2 & P3</button>
-			<button type="button" id="2break3to4" name="break2" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="2break4to5" name="break2" value="4" class="timetableBtn">Between P4 & P5</button>
-			<button type="button" id="2break5to6" name="break2" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="2break6to7" name="break2" value="6" class="timetableBtn active">Between P6 & P7</button>						
-			<button type="button" id="2break7to8" name="break2" value="7" class="timetableBtn">Between P7 & P8</button>						
-            <br>
-            <br>
+			<p class="break1">When is the First?</p>
+			<button type="button" id="1break1to2" name="break1" value="1" class="timetableBtn break1">Between P1 & P2</button>
+			<button type="button" id="1break2to3" name="break1" value="2" class="timetableBtn break1 active">Between P2 & P3</button>
+			<button type="button" id="1break3to4" name="break1" value="3" class="timetableBtn break1">Between P3 & P4</button>
+			<button type="button" id="1break4to5" name="break1" value="4" class="timetableBtn break1">Between P4 & P5</button>
+			<button type="button" id="1break5to6" name="break1" value="5" class="timetableBtn break1">Between P5 & P6</button>
+			<button type="button" id="1break6to7" name="break1" value="6" class="timetableBtn break1">Between P6 & P7</button>						
+			<button type="button" id="1break7to8" name="break1" value="7" class="timetableBtn break1">Between P7 & P8</button>						
+			<br class="break1">
+			<br class="break1">
+			<p class="break2">When is the Second?</p>
+			<button type="button" id="2break1to2" name="break2" value="1" class="timetableBtn break2">Between P1 & P2</button>
+			<button type="button" id="2break2to3" name="break2" value="2" class="timetableBtn break2">Between P2 & P3</button>
+			<button type="button" id="2break3to4" name="break2" value="3" class="timetableBtn break2">Between P3 & P4</button>
+			<button type="button" id="2break4to5" name="break2" value="4" class="timetableBtn break2">Between P4 & P5</button>
+			<button type="button" id="2break5to6" name="break2" value="5" class="timetableBtn break2">Between P5 & P6</button>
+			<button type="button" id="2break6to7" name="break2" value="6" class="timetableBtn break2 active">Between P6 & P7</button>						
+			<button type="button" id="2break7to8" name="break2" value="7" class="timetableBtn break2">Between P7 & P8</button>						
+            <br class="break2">
+            <br class="break2">
 			<p>How many Registration Periods in a Day?</p>
 			<button type="button" id="0periods" name="regPeriods" value="0" class="timetableBtn">0</button>
 			<button type="button" id="1periods" name="regPeriods" value="1" class="timetableBtn active">1</button>
 			<button type="button" id="2periods" name="regPeriods" value="2" class="timetableBtn">2</button>
 			<br>
 			<br>
-			<p>When is the First?</p>
-			<button type="button" id="1regBefore1" name="regPeriods1" value="0" class="timetableBtn active">Before P1</button>
-			<button type="button" id="1reg1to2" name="regPeriods1" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="1reg2to3" name="regPeriods1" value="2" class="timetableBtn">Between P2 & P3</button>
-			<button type="button" id="1reg3to4" name="regPeriods1" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="1reg4to5" name="regPeriods1" value="4" class="timetableBtn">Between P4 & P5</button>
-			<button type="button" id="1reg5to6" name="regPeriods1" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="1reg6to7" name="regPeriods1" value="6" class="timetableBtn">Between P6 & P7</button>						
-			<button type="button" id="1reg7to8" name="regPeriods1" value="7" class="timetableBtn">Between P7 & P8</button>						
-			<button type="button" id="1regAfterLast" name="regPeriods1" value="Last" class="timetableBtn">After Last Period</button>	
-			<br>
-			<br>
-			<p>Before or after Break?</p>
-			<button type="button" id="1regBeforeBreak" name="regBreak1" value="Before" class="timetableBtn">Before</button>
-			<button type="button" id="1regAfterBreak" name="regBreak1" value="After" class="timetableBtn active">After</button>
-			<br>
-			<br>
-			<p>Before or after Lunch?</p>
-			<button type="button" id="1regBeforeLunch" name="regLunch1" value="Before" class="timetableBtn">Before</button>
-			<button type="button" id="1regAfterLunch" name="regLunch1" value="After" class="timetableBtn active">After</button>
-			<br>
-			<br>
-			<p>When is the Second?</p>
-			<button type="button" id="2regBefore1" name="regPeriods2" value="0" class="timetableBtn">Before P1</button>
-			<button type="button" id="2reg1to2" name="regPeriods2" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="2reg2to3" name="regPeriods2" value="2" class="timetableBtn">Between P2 & P3</button>
-			<button type="button" id="2reg3to4" name="regPeriods2" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="2reg4to5" name="regPeriods2" value="4" class="timetableBtn">Between P4 & P5</button>
-			<button type="button" id="2reg5to6" name="regPeriods2" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="2reg6to7" name="regPeriods2" value="6" class="timetableBtn active">Between P6 & P7</button>						
-			<button type="button" id="2reg7to8" name="regPeriods2" value="7" class="timetableBtn">Between P7 & P8</button>						
-			<button type="button" id="2regAfterLast" name="regPeriods2" value="Last" class="timetableBtn">After Last Period</button>	
-			<br>
-			<br>
-			<p>Before or after Break?</p>
-			<button type="button" id="2regBeforeBreak" name="regBreak2" value="Before" class="timetableBtn">Before</button>
-			<button type="button" id="2regAfterBreak" name="regBreak2" value="After" class="timetableBtn active">After</button>
-			<br>
-			<br>
-			<p>Before or after Lunch?</p>
-			<button type="button" id="2regBeforeLunch" name="regLunch2" value="Before" class="timetableBtn">Before</button>
-			<button type="button" id="2regAfterLunch" name="regLunch2" value="After" class="timetableBtn active">After</button>
-			<br>
-			<br>
+			<p class="reg1">When is the First?</p>
+			<button type="button" id="1regBefore1" name="regPeriods1" value="0" class="timetableBtn reg1 active">Before P1</button>
+			<button type="button" id="1reg1to2" name="regPeriods1" value="1" class="timetableBtn reg1">Between P1 & P2</button>
+			<button type="button" id="1reg2to3" name="regPeriods1" value="2" class="timetableBtn reg1">Between P2 & P3</button>
+			<button type="button" id="1reg3to4" name="regPeriods1" value="3" class="timetableBtn reg1">Between P3 & P4</button>
+			<button type="button" id="1reg4to5" name="regPeriods1" value="4" class="timetableBtn reg1">Between P4 & P5</button>
+			<button type="button" id="1reg5to6" name="regPeriods1" value="5" class="timetableBtn reg1">Between P5 & P6</button>
+			<button type="button" id="1reg6to7" name="regPeriods1" value="6" class="timetableBtn reg1">Between P6 & P7</button>						
+			<button type="button" id="1reg7to8" name="regPeriods1" value="7" class="timetableBtn reg1">Between P7 & P8</button>						
+			<button type="button" id="1regAfterLast" name="regPeriods1" value="Last" class="timetableBtn reg1">After Last Period</button>	
+			<br class="reg1">
+			<br class="reg1">
+			<p class="reg1">Before or after Break?</p>
+			<button type="button" id="1regBeforeBreak" name="regBreak1" value="Before" class="timetableBtn reg1">Before</button>
+			<button type="button" id="1regAfterBreak" name="regBreak1" value="After" class="timetableBtn reg1 active">After</button>
+			<br class="reg1">
+			<br class="reg1">
+			<p class="reg1">Before or after Lunch?</p>
+			<button type="button" id="1regBeforeLunch" name="regLunch1" value="Before" class="timetableBtn reg1">Before</button>
+			<button type="button" id="1regAfterLunch" name="regLunch1" value="After" class="timetableBtn reg1 active">After</button>
+			<br class="reg1">
+			<br class="reg1">
+			<p class="reg2">When is the Second?</p>
+			<button type="button" id="2regBefore1" name="regPeriods2" value="0" class="timetableBtn reg2">Before P1</button>
+			<button type="button" id="2reg1to2" name="regPeriods2" value="1" class="timetableBtn reg2">Between P1 & P2</button>
+			<button type="button" id="2reg2to3" name="regPeriods2" value="2" class="timetableBtn reg2">Between P2 & P3</button>
+			<button type="button" id="2reg3to4" name="regPeriods2" value="3" class="timetableBtn reg2">Between P3 & P4</button>
+			<button type="button" id="2reg4to5" name="regPeriods2" value="4" class="timetableBtn reg2">Between P4 & P5</button>
+			<button type="button" id="2reg5to6" name="regPeriods2" value="5" class="timetableBtn reg2">Between P5 & P6</button>
+			<button type="button" id="2reg6to7" name="regPeriods2" value="6" class="timetableBtn reg2 active">Between P6 & P7</button>						
+			<button type="button" id="2reg7to8" name="regPeriods2" value="7" class="timetableBtn reg2">Between P7 & P8</button>						
+			<button type="button" id="2regAfterLast" name="regPeriods2" value="Last" class="timetableBtn reg2">After Last Period</button>	
+			<br class="reg2">
+			<br class="reg2">
+			<p class="reg2">Before or after Break?</p>
+			<button type="button" id="2regBeforeBreak" name="regBreak2" value="Before" class="timetableBtn reg2">Before</button>
+			<button type="button" id="2regAfterBreak" name="regBreak2" value="After" class="timetableBtn reg2 active">After</button>
+			<br class="reg2">
+			<br class="reg2">
+			<p class="reg2">Before or after Lunch?</p>
+			<button type="button" id="2regBeforeLunch" name="regLunch2" value="Before" class="timetableBtn reg2">Before</button>
+			<button type="button" id="2regAfterLunch" name="regLunch2" value="After" class="timetableBtn reg2 active">After</button>
+			<br class="reg2">
+			<br class="reg2">
 			<p>Check your Timetable:</p>
 			<br>
 			<table id="templateTimetable" ></table>
