"after last period" option issue resolved

--- a/timetable.html
+++ b/timetable.html
@@ -135,9 +135,9 @@
 			<button type="button" id="2reg3to4" name="regPeriods2" value="3" class="timetableBtn reg2">Between P3 & P4</button>
 			<button type="button" id="2reg4to5" name="regPeriods2" value="4" class="timetableBtn reg2">Between P4 & P5</button>
 			<button type="button" id="2reg5to6" name="regPeriods2" value="5" class="timetableBtn reg2">Between P5 & P6</button>
-			<button type="button" id="2reg6to7" name="regPeriods2" value="6" class="timetableBtn reg2 active">Between P6 & P7</button>						
+			<button type="button" id="2reg6to7" name="regPeriods2" value="6" class="timetableBtn reg2">Between P6 & P7</button>						
 			<button type="button" id="2reg7to8" name="regPeriods2" value="7" class="timetableBtn reg2">Between P7 & P8</button>						
-			<button type="button" id="2regAfterLast" name="regPeriods2" value="Last" class="timetableBtn reg2">After Last Period</button>	
+			<button type="button" id="2regAfterLast" name="regPeriods2" value="Last" class="timetableBtn reg2 active">After Last Period</button>	
 			<br class="reg2">
 			<br class="reg2">
 			<p class="reg2">Before or after Break?</p>
