all optional qs showing/hiding as appropriate

--- a/timetable.html
+++ b/timetable.html
@@ -118,16 +118,16 @@
 			<button type="button" id="1regAfterLast" name="regPeriods1" value="Last" class="timetableBtn reg1">After Last Period</button>	
 			<br class="reg1">
 			<br class="reg1">
-			<p class="reg1">Before or after Break?</p>
-			<button type="button" id="1regBeforeBreak" name="regBreak1" value="Before" class="timetableBtn reg1">Before</button>
-			<button type="button" id="1regAfterBreak" name="regBreak1" value="After" class="timetableBtn reg1 active">After</button>
-			<br class="reg1">
-			<br class="reg1">
-			<p class="reg1">Before or after Lunch?</p>
-			<button type="button" id="1regBeforeLunch" name="regLunch1" value="Before" class="timetableBtn reg1">Before</button>
-			<button type="button" id="1regAfterLunch" name="regLunch1" value="After" class="timetableBtn reg1 active">After</button>
-			<br class="reg1">
-			<br class="reg1">
+			<p class="reg1 regBreak1">Before or after Break?</p>
+			<button type="button" id="1regBeforeBreak" name="regBreak1" value="Before" class="timetableBtn reg1 regBreak1">Before</button>
+			<button type="button" id="1regAfterBreak" name="regBreak1" value="After" class="timetableBtn reg1 regBreak1 active">After</button>
+			<br class="reg1 regBreak1">
+			<br class="reg1 regBreak1">
+			<p class="reg1 regLunch1">Before or after Lunch?</p>
+			<button type="button" id="1regBeforeLunch" name="regLunch1" value="Before" class="timetableBtn reg1 regLunch1">Before</button>
+			<button type="button" id="1regAfterLunch" name="regLunch1" value="After" class="timetableBtn reg1 regLunch1 active">After</button>
+			<br class="reg1 regLunch1">
+			<br class="reg1 regLunch1">
 			<p class="reg2">When is the Second?</p>
 			<button type="button" id="2regBefore1" name="regPeriods2" value="0" class="timetableBtn reg2">Before P1</button>
 			<button type="button" id="2reg1to2" name="regPeriods2" value="1" class="timetableBtn reg2">Between P1 & P2</button>
@@ -140,16 +140,16 @@
 			<button type="button" id="2regAfterLast" name="regPeriods2" value="Last" class="timetableBtn reg2 active">After Last Period</button>	
 			<br class="reg2">
 			<br class="reg2">
-			<p class="reg2">Before or after Break?</p>
-			<button type="button" id="2regBeforeBreak" name="regBreak2" value="Before" class="timetableBtn reg2">Before</button>
-			<button type="button" id="2regAfterBreak" name="regBreak2" value="After" class="timetableBtn reg2 active">After</button>
-			<br class="reg2">
-			<br class="reg2">
-			<p class="reg2">Before or after Lunch?</p>
-			<button type="button" id="2regBeforeLunch" name="regLunch2" value="Before" class="timetableBtn reg2">Before</button>
-			<button type="button" id="2regAfterLunch" name="regLunch2" value="After" class="timetableBtn reg2 active">After</button>
-			<br class="reg2">
-			<br class="reg2">
+			<p class="reg2 regBreak2">Before or after Break?</p>
+			<button type="button" id="2regBeforeBreak" name="regBreak2" value="Before" class="timetableBtn reg2 regBreak2">Before</button>
+			<button type="button" id="2regAfterBreak" name="regBreak2" value="After" class="timetableBtn reg2 regBreak2 active">After</button>
+			<br class="reg2 regBreak2">
+			<br class="reg2 regBreak2">
+			<p class="reg2 regLunch2">Before or after Lunch?</p>
+			<button type="button" id="2regBeforeLunch" name="regLunch2" value="Before" class="timetableBtn reg2 regLunch2">Before</button>
+			<button type="button" id="2regAfterLunch" name="regLunch2" value="After" class="timetableBtn reg2 regLunch2 active">After</button>
+			<br class="reg2 regLunch2">
+			<br class="reg2 regLunch2">
 			<p>Check your Timetable:</p>
 			<br>
 			<table id="templateTimetable" ></table>
