change to timetable word to clarify need to scroll

--- a/timetable.html
+++ b/timetable.html
@@ -150,7 +150,7 @@
 			<button type="button" id="2regAfterLunch" name="regLunch2" value="After" class="timetableBtn reg2 regLunch2 active">After</button>
 			<br class="reg2 regLunch2">
 			<br class="reg2 regLunch2">
-			<p>Check your Timetable:</p>
+			<p>Check your Timetable: (don't forget to scroll down to save your template)</p>
 			<br>
 			<table id="templateTimetable" ></table>
 			<br>
