separated tt from script.js, added subj base files

--- a/subjects.html
+++ b/subjects.html
@@ -16,17 +16,17 @@
 	  <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-icon-180x180.png"> -->
 	  <script src="JS/libraries/p5.min.js"></script>
 	  <script src="JS/Script.js"></script>
-	  <script src="JS/timetable.js"></script>
+	  <script src="JS/subjects.js"></script>
 	  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="description" content="Coates Consultancy provides D&amp;TA accredited Health and Safety training for Design &amp; Technology (DT) Departments in secondary schools in London and South-East England." /> -->
 </head>
-<body id="top" onload="ttStart()">
+<body id="top" onload="subStart()">
     <nav class="nav" id="nav">
 		<ul>
-			<li id="navActive">
+			<li>
 				<a href='timetable.html'>Timetable</a>
 			</li>
-			<li>
+			<li id="navActive">
 				<a href='subjects.html'>Subjects</a>
 			</li>
 			<li>
@@ -41,7 +41,7 @@
 		</ul>
 	</nav>
 
-    <div class="timetablePage mainPage">
+    <div class="subjectsPage mainPage">
         <form>
             <label for="upload">Upload previous File : </label>
 			<input type="file" id="ttFile" name="upload" accept=".json">
