subjects.html content added

--- a/subjects.html
+++ b/subjects.html
@@ -42,125 +42,47 @@
 	</nav>
 
     <div class="subjectsPage mainPage">
-        <form>
-            <label for="upload">Upload previous File : </label>
-			<input type="file" id="ttFile" name="upload" accept=".json">
+        <p>You can either complete the form below for each subject, or download and fill in the template file.</p>
+		<br>
+		<br>
+		<label for="template">Download Template File : </label>
+		<button type="button" id="template" name="template" value="template">Template</button>
+		<br>
+		<br>
+		<br>
+
+		<form>
+		    <label for="upload">Upload previous File : </label>
+			<input type="file" id="subFile" name="upload" accept=".csv">
             <button type="button" id="checkIt" name="upload" value="Upload">Check it</button>
 			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid template json file from this software.</p>
 			<p class="hide invalidContents" id="invalidContents">Some or all of the values in the file uploaded were not able to be matched against expected values.  Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<br>
 			<br>
 			<br>
-			<p>How many Weeks in your timetable?</p>
-			<!-- <button type="button" id="1week" name="weeks" value="1" class = "timetableBtn" onclick="activateButton('weeks', 1)">1</button> -->
-			<button type="button" id="1week" name="weeks" value="1" class="timetableBtn">1</button>
-			<button type="button" id="2week" name="weeks" value="2" class="timetableBtn active">2</button>
-			<!-- <button type="button" id="2week" name="weeks" value="2" class="timetableBtn active" onclick="activateButton('weeks', 2)">2</button> -->
+			
+			<label for="subject">Subject :</label>
+  			<input type="text" id="subject" name="subject">
 			<br>
 			<br>
-			<p>How many Periods in a Day?</p>
-			<button type="button" id="5periods" name="periods" value="5" class="timetableBtn active">5</button>
-			<button type="button" id="6periods" name="periods" value="6" class="timetableBtn">6</button>
-			<button type="button" id="7periods" name="periods" value="7" class="timetableBtn">7</button>
-			<button type="button" id="8periods" name="periods" value="8" class="timetableBtn">8</button>
+ 	 		<label for="subCode">Subject Code :</label>
+  			<input type="text" id="subCode" name="subCode">
 			<br>
 			<br>
-			<p>When is Lunch?</p>
-			<button type="button" id="lunch1to2" name="lunch" value="1" class="timetableBtn">Between P1 & P2</button>
-			<button type="button" id="lunch2to3" name="lunch" value="2" class="timetableBtn">Between P2 & P3</button>
-			<button type="button" id="lunch3to4" name="lunch" value="3" class="timetableBtn">Between P3 & P4</button>
-			<button type="button" id="lunch4to5" name="lunch" value="4" class="timetableBtn active">Between P4 & P5</button>
-			<button type="button" id="lunch5to6" name="lunch" value="5" class="timetableBtn">Between P5 & P6</button>
-			<button type="button" id="lunch6to7" name="lunch" value="6" class="timetableBtn">Between P6 & P7</button>						
-			<button type="button" id="lunch7to8" name="lunch" value="7" class="timetableBtn">Between P7 & P8</button>						
+            <button type="button" id="addSub" name="addSub" value="addSub">Add Subject</button>
 			<br>
 			<br>
-			<p>How many Breaks do you have?</p>
-			<button type="button" id="0breaks" name="breaks" value="0" class="timetableBtn">0</button>
-			<button type="button" id="1breaks" name="breaks" value="1" class="timetableBtn active">1</button>
-			<button type="button" id="2breaks" name="breaks" value="2" class="timetableBtn">2</button>
 			<br>
+			<p>Check your Subjects: (don't forget to scroll down to save your template)</p>
 			<br>
-			<p class="break1">When is the First?</p>
-			<button type="button" id="1break1to2" name="break1" value="1" class="timetableBtn break1">Between P1 & P2</button>
-			<button type="button" id="1break2to3" name="break1" value="2" class="timetableBtn break1 active">Between P2 & P3</button>
-			<button type="button" id="1break3to4" name="break1" value="3" class="timetableBtn break1">Between P3 & P4</button>
-			<button type="button" id="1break4to5" name="break1" value="4" class="timetableBtn break1">Between P4 & P5</button>
-			<button type="button" id="1break5to6" name="break1" value="5" class="timetableBtn break1">Between P5 & P6</button>
-			<button type="button" id="1break6to7" name="break1" value="6" class="timetableBtn break1">Between P6 & P7</button>						
-			<button type="button" id="1break7to8" name="break1" value="7" class="timetableBtn break1">Between P7 & P8</button>						
-			<br class="break1">
-			<br class="break1">
-			<p class="break2">When is the Second?</p>
-			<button type="button" id="2break1to2" name="break2" value="1" class="timetableBtn break2">Between P1 & P2</button>
-			<button type="button" id="2break2to3" name="break2" value="2" class="timetableBtn break2">Between P2 & P3</button>
-			<button type="button" id="2break3to4" name="break2" value="3" class="timetableBtn break2">Between P3 & P4</button>
-			<button type="button" id="2break4to5" name="break2" value="4" class="timetableBtn break2">Between P4 & P5</button>
-			<button type="button" id="2break5to6" name="break2" value="5" class="timetableBtn break2">Between P5 & P6</button>
-			<button type="button" id="2break6to7" name="break2" value="6" class="timetableBtn break2 active">Between P6 & P7</button>						
-			<button type="button" id="2break7to8" name="break2" value="7" class="timetableBtn break2">Between P7 & P8</button>						
-            <br class="break2">
-            <br class="break2">
-			<p>How many Registration Periods in a Day?</p>
-			<button type="button" id="0periods" name="regPeriods" value="0" class="timetableBtn">0</button>
-			<button type="button" id="1periods" name="regPeriods" value="1" class="timetableBtn active">1</button>
-			<button type="button" id="2periods" name="regPeriods" value="2" class="timetableBtn">2</button>
-			<br>
-			<br>
-			<p class="reg1">When is the First?</p>
-			<button type="button" id="1regBefore1" name="regPeriods1" value="0" class="timetableBtn reg1 active">Before P1</button>
-			<button type="button" id="1reg1to2" name="regPeriods1" value="1" class="timetableBtn reg1">Between P1 & P2</button>
-			<button type="button" id="1reg2to3" name="regPeriods1" value="2" class="timetableBtn reg1">Between P2 & P3</button>
-			<button type="button" id="1reg3to4" name="regPeriods1" value="3" class="timetableBtn reg1">Between P3 & P4</button>
-			<button type="button" id="1reg4to5" name="regPeriods1" value="4" class="timetableBtn reg1">Between P4 & P5</button>
-			<button type="button" id="1reg5to6" name="regPeriods1" value="5" class="timetableBtn reg1">Between P5 & P6</button>
-			<button type="button" id="1reg6to7" name="regPeriods1" value="6" class="timetableBtn reg1">Between P6 & P7</button>						
-			<button type="button" id="1reg7to8" name="regPeriods1" value="7" class="timetableBtn reg1">Between P7 & P8</button>						
-			<button type="button" id="1regAfterLast" name="regPeriods1" value="Last" class="timetableBtn reg1">After Last Period</button>	
-			<br class="reg1">
-			<br class="reg1">
-			<p class="reg1 regBreak1">Before or after Break?</p>
-			<button type="button" id="1regBeforeBreak" name="regBreak1" value="Before" class="timetableBtn reg1 regBreak1">Before</button>
-			<button type="button" id="1regAfterBreak" name="regBreak1" value="After" class="timetableBtn reg1 regBreak1 active">After</button>
-			<br class="reg1 regBreak1">
-			<br class="reg1 regBreak1">
-			<p class="reg1 regLunch1">Before or after Lunch?</p>
-			<button type="button" id="1regBeforeLunch" name="regLunch1" value="Before" class="timetableBtn reg1 regLunch1">Before</button>
-			<button type="button" id="1regAfterLunch" name="regLunch1" value="After" class="timetableBtn reg1 regLunch1 active">After</button>
-			<br class="reg1 regLunch1">
-			<br class="reg1 regLunch1">
-			<p class="reg2">When is the Second?</p>
-			<button type="button" id="2regBefore1" name="regPeriods2" value="0" class="timetableBtn reg2">Before P1</button>
-			<button type="button" id="2reg1to2" name="regPeriods2" value="1" class="timetableBtn reg2">Between P1 & P2</button>
-			<button type="button" id="2reg2to3" name="regPeriods2" value="2" class="timetableBtn reg2">Between P2 & P3</button>
-			<button type="button" id="2reg3to4" name="regPeriods2" value="3" class="timetableBtn reg2">Between P3 & P4</button>
-			<button type="button" id="2reg4to5" name="regPeriods2" value="4" class="timetableBtn reg2">Between P4 & P5</button>
-			<button type="button" id="2reg5to6" name="regPeriods2" value="5" class="timetableBtn reg2">Between P5 & P6</button>
-			<button type="button" id="2reg6to7" name="regPeriods2" value="6" class="timetableBtn reg2">Between P6 & P7</button>						
-			<button type="button" id="2reg7to8" name="regPeriods2" value="7" class="timetableBtn reg2">Between P7 & P8</button>						
-			<button type="button" id="2regAfterLast" name="regPeriods2" value="Last" class="timetableBtn reg2 active">After Last Period</button>	
-			<br class="reg2">
-			<br class="reg2">
-			<p class="reg2 regBreak2">Before or after Break?</p>
-			<button type="button" id="2regBeforeBreak" name="regBreak2" value="Before" class="timetableBtn reg2 regBreak2">Before</button>
-			<button type="button" id="2regAfterBreak" name="regBreak2" value="After" class="timetableBtn reg2 regBreak2 active">After</button>
-			<br class="reg2 regBreak2">
-			<br class="reg2 regBreak2">
-			<p class="reg2 regLunch2">Before or after Lunch?</p>
-			<button type="button" id="2regBeforeLunch" name="regLunch2" value="Before" class="timetableBtn reg2 regLunch2">Before</button>
-			<button type="button" id="2regAfterLunch" name="regLunch2" value="After" class="timetableBtn reg2 regLunch2 active">After</button>
-			<br class="reg2 regLunch2">
-			<br class="reg2 regLunch2">
-			<p>Check your Timetable: (don't forget to scroll down to save your template)</p>
-			<br>
-			<table id="templateTimetable" ></table>
+			<table id="subList" ></table>
+			<button type="button" id="delSub" name="delSub" value="delSub">Delete Row</button>
 			<br>
 			<br>
 			<label for="save">If this is correct : </label>
             <button type="button" id="save" name="save" value="Save">Save</button>
 			<br>
-			<p>If this is not correct, please amend your answers above.</p>
-        </form>
+			<p>If this is not correct, please cick a row to select, and the click delete to delete the faulty row.</p>
     </div>
 
 </body>
