Alphanum Subject Code Validation added

--- a/subjects.html
+++ b/subjects.html
@@ -71,6 +71,8 @@
 			<br>
             <button type="button" id="addSub" name="addSub" value="addSub">Add Subject</button>
 			<br>
+			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed both boxes above.  Please complete both the Subject and Subject Code input boxes.</p>
+			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Subject Code can only be Letters or Numbers.  Please amend your Subject Code above.</p>
 			<br>
 			<br>
 			<p>Check your Subjects: (don't forget to scroll down to save your template)</p>
