checking file type and headers and showing errors

--- a/subjects.html
+++ b/subjects.html
@@ -55,7 +55,8 @@
 		    <label for="upload">Upload previous File : </label>
 			<input type="file" id="subFile" name="upload" accept=".csv">
             <button type="button" id="checkIt" name="upload" value="Upload">Check it</button>
-			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid template json file from this software.</p>
+			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid Subjects csv file from this software.</p>
+			<p class="hide invalidHeaders" id="invalidHeaders">Sorry, this doesn't seem to the the right file, please ensure you are using a file based upon the Subjects template provided.</p>
 			<p class="hide invalidContents" id="invalidContents">Some or all of the values in the file uploaded were not able to be matched against expected values.  Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<br>
 			<br>
