additional error checking added

--- a/subjects.html
+++ b/subjects.html
@@ -58,6 +58,7 @@
 			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid Subjects csv file from this software.</p>
 			<p class="hide invalidHeaders" id="invalidHeaders">Sorry, this doesn't seem to the the right file, please ensure you are using a file based upon the Subjects template provided.</p>
 			<p class="hide invalidContents" id="invalidContents">Sorry, it seems that one or more of your data rows is incomplete. Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
+			<p class="hide invalidRow" id="invalidRow">Sorry, it seems that one or more of your data rows is has produced an error. Please check the error messages below the user input for more infrmation, try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
 			<br>
 			<br>
 			<br>
