slight change to template instructions

--- a/subjects.html
+++ b/subjects.html
@@ -42,11 +42,12 @@
 	</nav>
 
     <div class="subjectsPage mainPage">
-        <p>You can either complete the form below for each subject, or download and fill in the template file.</p>
-		<br>
-		<br>
+        
 		<label for="template">Download Template File : </label>
 		<button type="button" id="template" name="template" value="template">Template</button>
+		<br>
+		<br>
+		<p>You can either complete the form below for each subject, or download and fill in the template file using the button above.  This will allow you to input the data offline, and in bulk, eg by copying from an export from your School Management Software.</p>
 		<br>
 		<br>
 		<br>
