base files setup

--- a/teachers.html
+++ b/teachers.html
@@ -17,10 +17,12 @@
 	  <script src="JS/libraries/p5.min.js"></script>
 	  <script src="JS/Script.js"></script>
 	  <script src="JS/subjects.js"></script>
+	  <script src="JS/teachers.js"></script>
+	  <script src="JS/teachersOnly.js"></script>
 	  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="description" content="Coates Consultancy provides D&amp;TA accredited Health and Safety training for Design &amp; Technology (DT) Departments in secondary schools in London and South-East England." /> -->
 </head>
-<body id="top" onload="subStart()">
+<body id="top" onload="teachersStart()">
     <nav class="nav" id="nav">
 		<ul>
 			<li>
