basic add - no verification

--- a/teachers.html
+++ b/teachers.html
@@ -74,8 +74,8 @@
 			<br>
 			<br>
 			<p>Would you prefer to input teacher sujects by :</p>
-			<button type="button" id="subCode" name="subjectStyle" value="subCode" class="subStyleBtn active">Subject Code</button>
-			<button type="button" id="subName" name="subjectStyle" value="subName" class="subStyleBtn">Subject Name</button>
+			<button type="button" id="subCode" name="subjectStyle" value="0" class="subStyleBtn active">Subject Code</button>
+			<button type="button" id="subName" name="subjectStyle" value="1" class="subStyleBtn">Subject Name</button>
 			<br>
 			<br>
 			<label for="setDefaults">Set Defaults : </label>
@@ -95,18 +95,23 @@
   			<input type="number" id="teacherPeriods" name="teacherPeriods">
 			<br>
 			<br>
-			<label for="teacherCode">Teacher Code :</label>
-			<input type="text" id="teacherCode" name="teacherCode">
-			<br>
-			<br>
 			<label for="primarySub">Primary Subject :</label>
 			<select name="primarySub" id="primarySub">
-
+				<option value=""></option>
+				<option value="De">De</option>
+				<option value="Dr">Dr</option>
+				<option value="En">En</option>
+				<option value="Ma">Ma</option>
 			</select>
 			<br>
 			<br>
 			<label for="secondarySub">Secondary Subject :</label>
 			<select name="secondarySub" id="secondarySub" >
+				<option value=""></option>
+				<option value="De">De</option>
+				<option value="Dr">Dr</option>
+				<option value="En">En</option>
+				<option value="Ma">Ma</option>
 
 			</select>
 			<br>
