check for missing input complete

--- a/teachers.html
+++ b/teachers.html
@@ -118,7 +118,7 @@
 			<br>
 			<button type="button" id="addTeacher" name="addTeacher" value="addTeacher">Add teacher</button>
 			<br>
-			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above.  All fields are required with the exception of the Secondary Subject.  Please complete all the Subject and Subject Code input boxes.</p>
+			<p class="hide shortInput" id="shortInput">Sorry, you don't appear to have completed all required fields above.  All fields are required with the exception of the Secondary Subject.  Please complete all the input boxes.</p>
 			<p class="hide notAlphaNum" id="notAlphaNum">Sorry, the Subject Code can only be Letters or Numbers.  Please amend your Subject Code above.</p>
 			<p class="hide alreadyAdded" id="alreadyAdded">Sorry, the Teacher Code you have added is already in the list.  Please amend your Subject Code above.</p>
 			<br>
