subjects file reading and dropdowns updating

--- a/teachers.html
+++ b/teachers.html
@@ -59,9 +59,10 @@
 			<input type="file" id="teacherFile" name="uploadTeacher" accept=".csv">
             <button type="button" id="checkIt" name="uploadTeacher" value="uploadTeacher">Check it</button>
 			<br>
-			<label for="uploadSub">Upload Subjects File : </label>
+			<br>
+			<label for="uploadSub">Upload Subjects File (required for both file check and/or manual input): </label>
 			<input type="file" id="subFile" name="uploadSub" accept=".csv">
-            <button type="button" id="checkIt" name="uploadSub" value="uploadSub">Add to Form</button>
+            <button type="button" id="checkItSub" name="uploadSub" value="uploadSub">Add to Form</button>
 			<p class="hide invalidFile" id="invalidFile">Sorry this is an invalid file type, please upload a valid Subjects csv file from this software.</p>
 			<p class="hide invalidHeaders" id="invalidHeaders">Sorry, this doesn't seem to the the right file, please ensure you are using a file based upon the templates provided.</p>
 			<p class="hide invalidContents" id="invalidContents">Sorry, it seems that one or more of your data rows is incomplete. Please either try to upload another file, or check the values below against expected outcomes, correct and save file again.</p>
@@ -98,21 +99,12 @@
 			<label for="primarySub">Primary Subject :</label>
 			<select name="primarySub" id="primarySub">
 				<option value=""></option>
-				<option value="De">De</option>
-				<option value="Dr">Dr</option>
-				<option value="En">En</option>
-				<option value="Ma">Ma</option>
 			</select>
 			<br>
 			<br>
 			<label for="secondarySub">Secondary Subject :</label>
 			<select name="secondarySub" id="secondarySub" >
 				<option value=""></option>
-				<option value="De">De</option>
-				<option value="Dr">Dr</option>
-				<option value="En">En</option>
-				<option value="Ma">Ma</option>
-
 			</select>
 			<br>
 			<br>
