subject style active function created

--- a/teachers.html
+++ b/teachers.html
@@ -70,11 +70,11 @@
 			<br>
 			<br>
 			<br>
-			<label for="defaultPeriods">What is the default number of contact sessions taught by teachers? :</label>
+			<label for="defaultPeriods">What is the default number of contact periods taught by teachers? :</label>
   			<input type="number" id="defaultPeriods" name="defaultPeriods">
 			<br>
 			<br>
-			<p>Would you prefer to input teacher sujects by :</p>
+			<p>Would you prefer to input teacher subjects by :</p>
 			<button type="button" id="subCode" name="subjectStyle" value="0" class="subStyleBtn active">Subject Code</button>
 			<button type="button" id="subName" name="subjectStyle" value="1" class="subStyleBtn">Subject Name</button>
 			<br>
