--- a/teachers.html
+++ b/teachers.html
@@ -49,7 +49,7 @@
 		<button type="button" id="template" name="template" value="template">Template</button>
 		<br>
 		<br>
-		<p>You can either complete the form below for each subject, or download and fill in the template file using the button above.  This will allow you to input the data offline, and in bulk, eg by copying from an export from your School Management Software.</p>
+		<p>You can either complete the form below for each teacher, or download and fill in the template file using the button above.  This will allow you to input the data offline, and in bulk, eg by copying from an export from your School Management Software.</p>
 		<br>
 		<br>
 		<br>
